force-app/main/default/objects/Contact/fields/Contract_Role__c.field-meta.xml
<CustomField>
    <fullName>Contract_Role__c</fullName>
    <description>The contact&apos;s contract role.</description>
    <formula>IF(
 true,
 IMAGE(&quot;/resource/1722192631000/WSRhuurder&quot;, &quot;Huurder&quot; , 30, 30) ,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Role</label>
    <type>Text</type>
</CustomField>