force-app/main/default/objects/Contact/fields/Residential_Fraud__c.field-meta.xml
<CustomField>
    <fullName>Residential_Fraud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox if the relation is known for residential fraud in the last two years.</description>
    <inlineHelpText>Select this checkbox if the relation is known for residential fraud in the last two years.</inlineHelpText>
    <label>Residential Fraud</label>
    <type>Checkbox</type>
</CustomField>