force-app/main/default/objects/Contact/fields/Searchable_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Searchable_Birthdate__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>The standard birthdate field is not searchable in global search. We copy the value of the Birthdate in this field, so that the user can search person accounts based on birthdate.</description>
    <label>Birthdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>